@@ -37,7 +37,8 @@ POE::Quickie - A lazy way to wrap blocking code and programs
  # only called when the task is finished
  sub result {
      my ($pid, $stdout, $stderr, $merged, $status, $context) = @_[ARG0..$#_];
-     print "got all this output in the context of '$context': '$output'\n";
+     print "got all this output in the context of '$context':\n";
+     print "$_\n" for @$stdout;
  }
 
 =head1 DESCRIPTION
@@ -182,11 +183,11 @@ to the options to L<C<run>|/run>.
 
 =item C<ARG0>: the process id of the child process
 
-=item C<ARG1>: all the stdout generated by the child process
+=item C<ARG1>: an array of every chunk of stdout generated by the child process
 
-=item C<ARG2>: all the stderr generated by the child process
+=item C<ARG2>: an array of every chunk of stderr generated by the child process
 
-=item C<ARG3>: merged stdout/stderr generated by the child process
+=item C<ARG3>: an array of the interleaved stdout and stderr chunks
 
 =item C<ARG4>: the exit code (L<C<$?>|perlvar>) of the child process
 
@@ -225,22 +226,24 @@ child process.
 
 =head3 C<quickie_tee>
 
-Returns 3 values: the stdout, stderr, and exit code (L<C<$?>|perlvar>) of the
-child process. In addition, it will echo the stdout/stderr to your process'
-stdout/stderr. Beware that stdout and stderr in the merged result are not
-guaranteed to be properly ordered due to buffering.
+Returns 3 values: an array of all stdout chunks, an array of all stderr
+chunks, and the exit code (L<C<$?>|perlvar>) of the child process. In addition,
+it will echo the stdout/stderr to your process' stdout/stderr.
 
 =head3 C<quickie_merged>
 
-Returns 2 values: the merged stdout & stderr, and exit code (L<C<$?>|perlvar>)
-of the child process.
+Returns 2 values: an array of interleaved stdout and stderr chunks, and the
+exit code (L<C<$?>|perlvar>) of the child process. Beware that stdout and
+stderr in the merged result are not guaranteed to be properly ordered due to
+buffering.
 
 =head3 C<quickie_tee_merged>
 
-Returns 2 values: the merged stdout & stderr, and exit code (L<C<$?>|perlvar>)
-of the child process. In addition, it will echo the merged stdout & stderr to
-your process' stdout. Beware that stdout and stderr in the merged result are
-not guaranteed to be properly ordered due to buffering.
+Returns 2 values: an array of interleaved stdout and stderr chunks, and the
+exit code (L<C<$?>|perlvar>) of the child process. In addition, it will echo
+the merged stdout & stderr to your process' stdout. Beware that stdout and
+stderr in the merged result are not guaranteed to be properly ordered due to
+buffering.
 
 =head1 AUTHOR
 
