@@ -191,7 +191,12 @@ sub _child_signal {
     }
 
     if ($self->{lazy}{$pid}) {
-        $self->{lazy}{$pid}{results} = $self->_lazy_collate_results($pid);
+        $self->{lazy}{$pid}{results} = [
+            $self->{lazy}{$pid}{stdout},
+            $self->{lazy}{$pid}{stderr},
+            $self->{lazy}{$pid}{merged},
+            $self->{wheels}{$id}{status},
+        ];
 
     }
     delete $self->{wheels}{$id};
@@ -366,19 +371,6 @@ sub _lazy_run {
     return $stdout, $stderr, $status;
 }
 
-sub _lazy_collate_results {
-    my ($self, $pid) = @_;
-
-    my $data   = $self->{lazy}{$pid};
-    my $id     = $self->_pid_to_id($pid);
-    my $status = $self->{wheels}{$id}{status};
-    my $stdout = join '', map { "$_\n" } @{ $data->{stdout} || [] };
-    my $stderr = join '', map { "$_\n" } @{ $data->{stderr} || [] };
-    my $merged = join '', map { "$_\n" } @{ $data->{merged} || [] };
-
-    return [$stdout, $stderr, $merged, $status];
-}
-
 sub quickie_run {
     my %args = @_;
     my $self = POE::Quickie->new();
@@ -465,7 +457,8 @@ POE::Quickie - A lazy way to wrap blocking code and programs
  # only called when the task is finished
  sub result {
      my ($pid, $stdout, $stderr, $merged, $status, $context) = @_[ARG0..$#_];
-     print "got all this output in the context of '$context': '$output'\n";
+     print "got all this output in the context of '$context':\n";
+     print "$_\n" for @$stdout;
  }
 
 =head1 DESCRIPTION
@@ -610,11 +603,11 @@ to the options to L<C<run>|/run>.
 
 =item C<ARG0>: the process id of the child process
 
-=item C<ARG1>: all the stdout generated by the child process
+=item C<ARG1>: an array of every chunk of stdout generated by the child process
 
-=item C<ARG2>: all the stderr generated by the child process
+=item C<ARG2>: an array of every chunk of stderr generated by the child process
 
-=item C<ARG3>: merged stdout/stderr generated by the child process
+=item C<ARG3>: an array of the interleaved stdout and stderr chunks
 
 =item C<ARG4>: the exit code (L<C<$?>|perlvar>) of the child process
 
@@ -653,22 +646,24 @@ child process.
 
 =head3 C<quickie_tee>
 
-Returns 3 values: the stdout, stderr, and exit code (L<C<$?>|perlvar>) of the
-child process. In addition, it will echo the stdout/stderr to your process'
-stdout/stderr. Beware that stdout and stderr in the merged result are not
-guaranteed to be properly ordered due to buffering.
+Returns 3 values: an array of all stdout chunks, an array of all stderr
+chunks, and the exit code (L<C<$?>|perlvar>) of the child process. In addition,
+it will echo the stdout/stderr to your process' stdout/stderr.
 
 =head3 C<quickie_merged>
 
-Returns 2 values: the merged stdout & stderr, and exit code (L<C<$?>|perlvar>)
-of the child process.
+Returns 2 values: an array of interleaved stdout and stderr chunks, and the
+exit code (L<C<$?>|perlvar>) of the child process. Beware that stdout and
+stderr in the merged result are not guaranteed to be properly ordered due to
+buffering.
 
 =head3 C<quickie_tee_merged>
 
-Returns 2 values: the merged stdout & stderr, and exit code (L<C<$?>|perlvar>)
-of the child process. In addition, it will echo the merged stdout & stderr to
-your process' stdout. Beware that stdout and stderr in the merged result are
-not guaranteed to be properly ordered due to buffering.
+Returns 2 values: an array of interleaved stdout and stderr chunks, and the
+exit code (L<C<$?>|perlvar>) of the child process. In addition, it will echo
+the merged stdout & stderr to your process' stdout. Beware that stdout and
+stderr in the merged result are not guaranteed to be properly ordered due to
+buffering.
 
 =head1 AUTHOR
 
