@@ -2,7 +2,7 @@ use strict;
 use warnings FATAL => 'all';
 use POE;
 use POE::Quickie;
-use Test::More tests => 10;
+use Test::More tests => 8;
 use Capture::Tiny qw(capture);
 
 POE::Session->create(
@@ -21,13 +21,12 @@ sub _start {
     my $before = time;
     my ($stdout, $stderr, $status) = quickie(sub { sleep 3; print "foo\n" });
     is(($status >> 8), 0, 'Correct exit status');
-    is($stdout, "foo\n", 'Got stdout');
+    is_deeply($stdout, ['foo'], 'Got stdout');
     my $after = time;
     cmp_ok($after - $before, '>=', 2, 'The program runs');
 
     my ($merged) = quickie_merged(sub { warn "foo\n"; print "bar\n" });
-    like($merged, qr/foo\n/m, 'Got merged output');
-    like($merged, qr/bar\n/m, 'Got merged output');
+    is_deeply($merged, ['foo', 'bar'], 'Got merged output');
 
     ($stdout, $stderr) = capture {
         quickie_tee(sub { print "stdout\n"; warn "stderr\n"});
@@ -41,7 +40,6 @@ sub _start {
         quickie_tee_merged(sub { warn "stderr\n"; print "stdout\n" });
     };
 
-    like($stdout, qr/stderr\n/m, 'Got tee merged stdout');
-    like($stdout, qr/stdout\n/m, 'Got tee merged stdout');
+    is($stdout, "stderr\nstdout\n", 'Got tee merged stdout');
     is($stderr, '', 'Got tee merged stderr');
 }
