@@ -1,6 +1,10 @@
 Revision history for POE-Quickie
 
 {{$NEXT}}
+    - Change the order of arguments to ResultEvent to fit my sense of their
+      order of importance
+    - Events/functions which return the complete stdout/stderr will now
+      return arrays instead of strings so it works with non-linebased output.
 
 0.14  Fri Apr 29 03:17:16 GMT 2011
     - Add a warning to the Pod about using the convenience functions in
